@@ -105,10 +105,15 @@
     <name>Daniel Yacob</name>
     <email>locales@geez.org</email>
   </person>
-  <!-- ar translation coordinator -->
+  <!-- former ar translation coordinator -->
   <person id="arafetmedini">
     <name>Arafat Medini</name>
     <email>lumina@silverpen.de</email>
+  </person>
+  <!-- ar translation coordinator -->
+  <person id="djihed">
+    <name>Djihed Afifi</name>
+    <email>djihed@gmail.com</email>
   </person>
   <!-- hy translation coordinator -->
   <person id="noch">
@@ -584,10 +589,15 @@
     <name>Marcel Telka</name>
     <email>marcel@telka.sk</email>
   </person>
-  <!-- sl translation coordinator -->
+  <!-- former sl translation coordinator -->
   <person id="minmax">
     <name>Matjaz Horvat</name>
     <email>matjaz@owca.info</email>
+  </person>
+  <!-- sl translation coordinator -->
+  <person id="maticz">
+    <name>Matic Žgur</name>
+    <email>mr.zgur@gmail.com</email>
   </person>
   <!-- es translation coordinator -->
   <person id="serrador">
@@ -691,7 +701,7 @@
   </person>
   <!-- vi translation coordinator -->
   <person id="pclouds">
-    <name>Nguyen Thai Ngoc Duy</name>
+    <name>Nguyễn Thái Ngọc Duy</name>
     <email>pclouds@users.sourceforge.net</email>
   </person>
   <!-- wa translation coordinator -->
