@@ -26,7 +26,7 @@
   </team>
   <team id="ar">
     <_language id="ar">Arabic</_language>
-    <coordinator id="arafetmedini"/>
+    <coordinator id="djihed"/>
     <webpage>http://www.arabeyes.org/</webpage>
   </team>
   <team id="hy">
@@ -469,9 +469,12 @@
     <webpage>http://telka.sk/linux/sk-l10n/</webpage>
   </team>
   <team id="sl">
+    <_description>Slovenian GNOME Translation Team</_description>
     <_language id="sl">Slovenian</_language>
-    <coordinator id="minmax"/>
+    <coordinator id="maticz"/>
     <webpage>http://lugos.si/wiki/GNOME/</webpage>
+    <mailing-list>gnome-si@googlegroups.com</mailing-list>
+    <mailing-list-subscribe>http://groups.google.si/group/gnome-si</mailing-list-subscribe>
   </team>
   <team id="es">
     <_language id="es">Spanish</_language>
@@ -568,7 +571,9 @@
   <team id="vi">
     <_language id="vi">Vietnamese</_language>
     <coordinator id="pclouds"/>
-    <webpage>http://gnomevi.sourceforge.net/</webpage>
+    <webpage>http://live.gnome.org/GnomeVi</webpage>
+    <mailing-list>gnomevi-list@lists.sourceforge.net</mailing-list>
+    <mailing-list-subscribe>https://lists.sourceforge.net/lists/listinfo/gnomevi-list</mailing-list-subscribe>
   </team>
   <team id="wa">
     <_language id="wa">Walloon</_language>
